# ECE408-1

./: .gitignore  CMakeLists.txt
my_implementation/: cu_utils.h  mp1_my_impl.cu
test_data/mp01/0/: res.raw
